--- a/angularapp/src/app/user/user-navbar/user-navbar.component.html
+++ b/angularapp/src/app/user/user-navbar/user-navbar.component.html
@@ -21,7 +21,7 @@
         </ul>
         <ul class="navbar-nav ml-auto second-nav">
             <li class="nav-item">
-                <button class="nav-link" (click)="logout()">Logout</button>
+                <button class="nav-link btn btn-warning " style="color: white;" (click)="logout()">Logout</button>
             </li>
         </ul>
     </div>
