--- a/angularapp/src/app/admin/postpaid/add-postpaid/add-postpaid.component.css
+++ b/angularapp/src/app/admin/postpaid/add-postpaid/add-postpaid.component.css
@@ -15,3 +15,11 @@
     top: 200px;
     width: 30%;
   }
+  span{
+    color: red;
+  }
+  button
+  {
+    background-color: brown;
+    margin-left: 650px;
+  }
