--- a/angularapp/src/app/admin/postpaid/add-postpaid/add-postpaid.component.html
+++ b/angularapp/src/app/admin/postpaid/add-postpaid/add-postpaid.component.html
@@ -46,7 +46,6 @@
       </div>
     </div>
   
-    <button type="submit" (click)="onSubmit()" [disabled]="!validationForm.valid"
-      style="background-color: brown; margin-left: 650px; " class="btn btn-danger">Add Plan</button>
+    <button type="submit" (click)="onSubmit()" [disabled]="!validationForm.valid" class="btn btn-danger">Add Plan</button>
   
   </form>
