changes has done

--- a/angularapp/src/app/admin/postpaid/postpaid-plan/postpaid-plan.component.html
+++ b/angularapp/src/app/admin/postpaid/postpaid-plan/postpaid-plan.component.html
@@ -19,7 +19,7 @@
           <td>{{plans.planType}} <br><br> Description: {{plans.planDescription}} (validity for {{plans.planValidity}})
             <br> Offers: <img
               src="https://images.unsplash.com/photo-1611162617474-5b21e879e113?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8M3x8bmV0ZmxpeHxlbnwwfHwwfHx8MA%3D%3D&auto=format&fit=crop&w=500&q=60"
-              style="height: 50px;"> </td>
+              style="height: 50px;" alt="netfi"> </td>
           <td>{{plans.planName}} </td>
           <td>{{plans.planPrice}} ₹ <br><br><br>
             <button type="button" id="editPrepaidPlan" (click)="editPlan(plans.id)" class="btn btn-default btn-sm"><svg
