--- a/angularapp/src/app/user/user-navbar/user-navbar.component.html
+++ b/angularapp/src/app/user/user-navbar/user-navbar.component.html
@@ -15,9 +15,6 @@
             <li class="nav-item">
                 <a class="nav-link" routerLink="reviews" routerLinkActive="active">Reviews</a>
             </li>
-            <!-- <li class="nav-item ml-sm-auto">
-                <button class="nav-link" (click)="logout()">Logout</button>
-            </li> -->
         </ul>
         <ul class="navbar-nav ml-auto second-nav">
             <li class="nav-item">
@@ -27,6 +24,6 @@
     </div>
 </nav>
 
-<!-- <div class="container">
-    <router-outlet></router-outlet>
-</div> -->
+<div class="container">
+    <router-outlet> </router-outlet>
+</div>
