changes has done in postpaid

--- a/angularapp/src/app/admin/postpaid/postpaid-plan/postpaid-plan.component.html
+++ b/angularapp/src/app/admin/postpaid/postpaid-plan/postpaid-plan.component.html
@@ -6,7 +6,7 @@
         placeholder="Type here to search plans" [(ngModel)]="SearchText" name="SearchText" aria-label="Search">
     </form>
     <br><br>
-    <table class="table table-striped" style="width: 90%;">
+    <table class="table table-striped" style="width: 90%;" aria-describedby="mydesc">
       <thead>
         <tr>
           <th scope="col">Plan Type</th>
