--- a/angularapp/src/styles.css
+++ b/angularapp/src/styles.css
@@ -2,5 +2,5 @@
 
 body{
   background-color: lightslategray;
-  font-family: Comic Sans MS;
+  font-family: "Comic Sans MS", cursive, sans-serif;
 }
