--- a/angularapp/src/app/admin/addon/addon-plan/addon-plan.component.html
+++ b/angularapp/src/app/admin/addon/addon-plan/addon-plan.component.html
@@ -6,7 +6,7 @@
         placeholder="Type here to search plans" [(ngModel)]="SearchAddon" name="SearchText" aria-label="Search">
     </form>
     <br><br>
-    <table class="table table-striped" style="width: 90%;">
+    <table class="table table-striped" style="width: 90%;" aria-describedby="mydesc">
       <thead style="background-color: #800020">
         <tr style="color: white;">
           <th scope="col">Plan Type</th>
