--- a/angularapp/src/app/admin/addon/addon-plan/addon-plan.component.html
+++ b/angularapp/src/app/admin/addon/addon-plan/addon-plan.component.html
@@ -1,28 +1,25 @@
 <div style="margin-left: 100px;">
     <br>
-    <button type="button" (click)="goToAddPostpaid()" class="btn btn-light">Add Plan</button>
+    <button type="button" (click)="goToAddAddon()" class="btn btn-light">Add Plan</button>
     <form class="form-inline my-2 my-lg-0" style="margin-left: 450px; position: relative; bottom: 40px;">
       <input class="form-control mr-sm-4" style="width: 300px; text-align: center;"
-        placeholder="Type here to search plans" [(ngModel)]="SearchText" name="SearchText" aria-label="Search">
+        placeholder="Type here to search plans" [(ngModel)]="SearchAddon" name="SearchText" aria-label="Search">
     </form>
     <br><br>
-    <table class="table table-striped" style="width: 90%;" aria-describedby="table">
-      <thead>
-        <tr>
+    <table class="table table-striped" style="width: 90%;" aria-describedby="mydesc">
+      <thead style="background-color: #800020">
+        <tr style="color: white;">
           <th scope="col">Plan Type</th>
           <th scope="col">Plan Name</th>
           <th scope="col">Plan Price</th>
         </tr>
       </thead>
-      <tbody *ngFor="let plans of allPlans | search: SearchText">
+      <tbody *ngFor="let plans of addon | searchaddon: SearchAddon" style="background-color: #ffd1d1">
         <tr>
-          <td>{{plans.planType}} <br><br> Description: {{plans.planDescription}} (validity for {{plans.planValidity}})
-            <br> Offers: <img
-              src="https://images.unsplash.com/photo-1611162617474-5b21e879e113?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8M3x8bmV0ZmxpeHxlbnwwfHwwfHx8MA%3D%3D&auto=format&fit=crop&w=500&q=60"
-              style="height: 50px;" alt="image1"> </td>
-          <td>{{plans.planName}} </td>
-          <td>{{plans.planPrice}} ₹ <br><br><br>
-            <button type="button" id="editPrepaidPlan" (click)="editPlan(plans.id)" class="btn btn-default btn-sm"><svg
+          <td>{{plans.addonType}} <br><br> Description: {{plans.addonDetails}} ({{plans.addonValidity}}) <br> </td>
+          <td>{{plans.addonName}} </td>
+          <td>{{plans.addonPrice}} ₹ <br><br><br>
+            <button type="button" id="editPrepaidPlan" (click)="updatelist(plans.id)" class="btn btn-default btn-sm"><svg
                 xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pencil-square"
                 viewBox="0 0 16 16">
                 <path
@@ -30,7 +27,7 @@
                 <path fill-rule="evenodd"
                   d="M1 13.5A1.5 1.5 0 0 0 2.5 15h11a1.5 1.5 0 0 0 1.5-1.5v-6a.5.5 0 0 0-1 0v6a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5H9a.5.5 0 0 0 0-1H2.5A1.5 1.5 0 0 0 1 2.5v11z" />
               </svg></button>
-            <button type="button" id="deletePrepaidPlan" (click)="deletePlan(plans.id)" class="btn btn-default btn-sm"
+            <button type="button" id="deletePrepaidPlan" (click)="deletelist(plans.id)" class="btn btn-default btn-sm"
               style="margin-left: 20px;"> <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
                 fill="currentColor" class="bi bi-trash" viewBox="0 0 16 16">
                 <path
