--- a/angularapp/src/app/admin/postpaid/postpaid-plan/postpaid-plan.component.html
+++ b/angularapp/src/app/admin/postpaid/postpaid-plan/postpaid-plan.component.html
@@ -1,10 +1,10 @@
 <div style="margin-left: 100px;">
     <br>
     <button type="button" (click)="goToAddPostpaid()" class="btn btn-light">Add Plan</button>
-    <form class="form-inline my-2 my-lg-0" style="margin-left: 450px; position: relative; bottom: 40px;">
+    <!-- <form class="form-inline my-2 my-lg-0" style="margin-left: 450px; position: relative; bottom: 40px;">
       <input class="form-control mr-sm-4" style="width: 300px; text-align: center;"
         placeholder="Type here to search plans" [(ngModel)]="SearchText" name="SearchText" aria-label="Search">
-    </form>
+    </form> -->
     <br><br>
     <table class="table table-striped" style="width: 90%;" aria-describedby="table">
       <thead>
