--- a/angularapp/src/app/login/login.component.html
+++ b/angularapp/src/app/login/login.component.html
@@ -10,10 +10,10 @@
                 placeholder="Enter email"
                 required><br>
                 <span style="margin-right: 335px;" class="text-danger" *ngIf="!Email?.valid && (Email?.touched || Email?.dirty)">
-                    <span class="text-danger" *ngIf="Email?.errors?.['required']">
+                    <span class="text-danger" *ngIf="email.hasError('required')">
                         Email is Required*
                     </span>
-                    <span class="text-danger" *ngIf="Email?.errors?.['email']">
+                    <span class="text-danger" *ngIf="email.hasError('pattern')">
                         Email is invalid
                     </span>
                 </span>
@@ -24,10 +24,10 @@
                 placeholder="Enter Password"
                 required><br>
                 <span style="margin-right: 300px;" class="text-danger" *ngIf="!password?.valid && (password?.touched || password?.dirty)">
-                    <span class="text-danger" *ngIf="password?.errors?.['required']">
+                    <span class="text-danger" *ngIf="password.hasError('required')">
                         Password is Required*
                     </span>
-                    <span class="text-danger" *ngIf="password?.errors?.['pattern']">
+                    <span class="text-danger" *ngIf="password.hasError('pattern')">
                         Password is invalid
                     </span>
                 </span>
