--- a/angularapp/src/app/admin/admin-navbar/admin-navbar.component.html
+++ b/angularapp/src/app/admin/admin-navbar/admin-navbar.component.html
@@ -11,7 +11,7 @@
         <a routerLink="addons" id="adminAddOns" routerLinkActive="active" class="nav-link">Addons</a>
       </li>
       <li class="nav-items" style="margin-left: 500px;">
-        <a r id="adminAddOns" class="nav-link">Logout</a>
+        <a routerLink="login" id="adminAddOns"  class="nav-link">Logout</a>
       </li>
     </ul>
   </nav>
