--- a/angularapp/src/app/user/user-navbar/user-navbar.component.html
+++ b/angularapp/src/app/user/user-navbar/user-navbar.component.html
@@ -27,6 +27,6 @@
     </div>
 </nav>
 
-<!-- <div class="container">
+<div class="container">
     <router-outlet></router-outlet>
-</div> -->
+</div>
