--- a/angularapp/src/app/admin/postpaid/postpaid-plan/postpaid-plan.component.html
+++ b/angularapp/src/app/admin/postpaid/postpaid-plan/postpaid-plan.component.html
@@ -1,10 +1,10 @@
 <div style="margin-left: 100px;">
     <br>
     <button type="button" (click)="goToAddPostpaid()" class="btn btn-light">Add Plan</button>
-    <form class="form-inline my-2 my-lg-0" style="margin-left: 450px; position: relative; bottom: 40px;">
+    <!-- <form class="form-inline my-2 my-lg-0" style="margin-left: 450px; position: relative; bottom: 40px;">
       <input class="form-control mr-sm-4" style="width: 300px; text-align: center;"
         placeholder="Type here to search plans" [(ngModel)]="SearchText" name="SearchText" aria-label="Search">
-    </form>
+    </form> -->
     <br><br>
     <table class="table table-striped" style="width: 90%;" aria-describedby="table">
       <thead>
@@ -14,12 +14,13 @@
           <th scope="col">Plan Price</th>
         </tr>
       </thead>
-      <tbody *ngFor="let plans of allPlans | search: SearchText">
+      <tbody *ngFor="let plans of allPlans">
         <tr>
-          <td>{{plans.planType}} <br><br> Description: {{plans.planDescription}} (validity for {{plans.planValidity}})
-            <br> Offers: <img
+          <td>{{plans.planType}} <br><br> Description: {{plans.planDetails}} (validity for {{plans.planValidity}})
+            <!-- <br> Offers: <img
               src="https://images.unsplash.com/photo-1611162617474-5b21e879e113?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8M3x8bmV0ZmxpeHxlbnwwfHwwfHx8MA%3D%3D&auto=format&fit=crop&w=500&q=60"
-              style="height: 50px;" alt="image1"> </td>
+              style="height: 50px;" alt="image1"> </td> -->
+            <br> Offers: {{plans.planOffer}} </td>
           <td>{{plans.planName}} </td>
           <td>{{plans.planPrice}} ₹ <br><br><br>
             <button type="button" id="editPrepaidPlan" (click)="editPlan(plans.id)" class="btn btn-default btn-sm"><svg
