--- a/angularapp/src/app/user/review/show-review/show-review.component.html
+++ b/angularapp/src/app/user/review/show-review/show-review.component.html
@@ -1,10 +1,11 @@
-<div class="card" style="margin-top: 20px; margin-bottom: 5px; background-color: whitesmoke;" *ngFor="let review of reviews">
+<<ng-container *ngFor="let review of reviews">
+<div class="card" style="margin-top: 20px; margin-bottom: 5px; background-color: whitesmoke;">
     <div class="card-body">
       <div class="content-container">
         <div class="data-container">
           <p class="card-text">user Name: {{ review.username }}</p>
           <p class="card-text">Rating: <span *ngFor="let star of stars; let i = index">
-            <i class="fas fa-star" [style.color]="i < review.rating ? 'orange' : ''"></i>
+            <em class="fas fa-star" [style.color]="i < review.rating ? 'orange' : ''"></em>
           </span>
         </p>
           <p class="card-text">Review: {{ review.review }}</p>
@@ -12,5 +13,5 @@
       </div>
     </div>
   </div>
-  
+</ng-container>
   
